# adamHub

./: .dockerignore  .env.example  .env.vps.example  .gitignore  Dockerfile  README.md  conv-gemini.md  docker-compose.vps.yml  docker-compose.yml  intermarche_results.html  pyproject.toml  test_push.py  test_push_advanced.py
adamhub-assistant/: .env.example  SKILL.md
adamhub-assistant/finance/: SKILL.md
adamhub-assistant/fitness/: SKILL.md
adamhub-assistant/groceries/: SKILL.md
adamhub-assistant/habits/: SKILL.md
adamhub-assistant/patrimony/: SKILL.md
adamhub-assistant/references/: error-recovery.md  http-examples.md  playbooks.md
alembic/: env.py
alembic/versions/: 0c9e6a3b7c12_recipe_steps_utensils_source.py  73b49b673d54_initial.py  856a11daf439_add_supermarketproduct.py  9b7a6d4c1e2f_meal_plan_datetime.py  a4c9d7b21e36_add_store_metadata_to_grocery_and_pantry.py  a9d4e7c2f6b1_add_calendar_feeds.py  (+8 more)
app/: __init__.py  main.py
data/: cookies_intermarche.json
docs/: phase2_1_matrix.md  project-tour.md  vps-install.md
openclaw/: .env.example  SKILL.md
output/: intermarche_product.html  intermarche_results.html
scripts/: docker-entrypoint.sh  install-vps.sh  test_intermarche_env.py  update-vps.sh
tests/: conftest.py  test_auth_and_finance.py  test_calendar_feeds.py  test_calendar_overlap.py  test_fitness.py  test_grocery_pantry_flow.py  test_habits_api.py  test_meal_plan_calendar_flow.py  test_notifications.py  test_postgres_smoke.py  test_skill.py  test_supermarket.py  test_video_intake.py
web/: package-lock.json  package.json  vite.config.ts
(+91 files in other folders)
