[project]
name = "adamhub-life-api"
version = "0.1.0"
description = "Unified life management API for tasks, finances, groceries, recipes, and habits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.1",
  "psycopg[binary]>=3.2.3",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.6",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "postgres: optional smoke tests against a real PostgreSQL database",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
